2012-05-31  Filip Pizlo  <fpizlo@apple.com>

        DataLog should be usable outside of JSC
        https://bugs.webkit.org/show_bug.cgi?id=88015

        Reviewed by Oliver Hunt.

        * wtf/DataLog.h:
        (WTF):

2012-05-31  Anders Carlsson  <andersca@apple.com>

        Disable support for rvalue references until I figure out why this is breaking the Xcode 4.2 build.

        * wtf/Compiler.h:

2012-05-31  Anders Carlsson  <andersca@apple.com>

        Vector should have a move constructor and move assignment operator
        https://bugs.webkit.org/show_bug.cgi?id=87997

        Reviewed by Andreas Kling.

        * wtf/Compiler.h:
        Use __has_extension so we can use move semantics and other C++11 features even when building as C++98.

        * wtf/Vector.h:
        Add a move constructor and a move assignment operator to Vector.

2012-05-31  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Simplify QT_VERSION_CHECKS for Qt5 by introducing HAVE(QT5)
        https://bugs.webkit.org/show_bug.cgi?id=87955

        Reviewed by Simon Hausmann.

        * wtf/qt/UtilsQt.h:

2012-05-30  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        HashTable.h has using directives for std::pair and std::make_pair
        https://bugs.webkit.org/show_bug.cgi?id=29919

        Reviewed by Darin Adler.

        * wtf/HashTraits.h:
        (WTF): Remove the directives.

2012-05-30  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        HashTable.h has using directives for std::pair and std::make_pair
        https://bugs.webkit.org/show_bug.cgi?id=29919

        Reviewed by Darin Adler.

        Change code to use std::pair and std::make_pair. Later patch will remove the
        'using' directives.

        * wtf/HashTable.h:
        (WTF::hashTableSwap):
        (HashTable):
        * wtf/HashTraits.h:
        (PairHashTraits):
        (WTF::PairHashTraits::emptyValue):

2012-05-30  Patrick Gansterer  <paroga@webkit.org>
